Ajout swagger + correction requêtes avec db.query + migration sqllite vers PG
